--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -5,8 +5,8 @@ html{
     min-height: 100%;
 }
 body{
-    margin-bottom:60px;
-    padding-top:50px;
+    margin-bottom:100px;
+    padding-top:150px;
     background-color: rgb(33, 33, 33);
     color: whitesmoke;
 }
@@ -17,7 +17,7 @@ body{
 .footer
 {
     position: absolute;
-    botoom: 0;
+    bottom:0;
     width:100%;
     height:60px;
     padding-right: 50%;
