--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -7,12 +7,13 @@ html{
 body{
     margin-bottom:100px;
     padding-top:150px;
-    background-color: rgb(33, 33, 33);
+    background-color: #212121;
     color: whitesmoke;
 }
 .header
 {
-    background-color: rgb(22, 69, 86);
+    background-color: #164556;
+    color: #ffffff;
 }
 .footer
 {
@@ -21,8 +22,8 @@ body{
     width:100%;
     height:60px;
     padding-right: 50%;
-    background-color: rgb(22, 69, 86);
-    color: whitesmoke;
+    background-color: #1f576a;
+    color: #f5f5f5;
 }
 .numberColor
 {
