--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -90,3 +90,10 @@ body{
 .centered{
     margin: 0 auto;
 }
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+}
